k8s/ingress-v1-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: v1-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1-1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service-v1-1
                port:
                  number: 80
