k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: product-service-v1
            port:
              number: 80
      - path: /v1.1
        pathType: Prefix
        backend:
          service:
            name: product-service-v1-1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: product-service-v2
            port:
              number: 80
